--- a/index.html
+++ b/index.html
@@ -1,276 +1,203 @@
-<!doctype html>
-<html lang="hi">
+<!DOCTYPE html>
+<html lang="mr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Vasai Live News</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<style>
-body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
-header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
-header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.header-buttons button:hover{transform:scale(1.05);}
-.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
-.notice-ticker{background:#dc2626;padding:6px;top:56px;}
-.headline-ticker{background:#1e40af;padding:6px;top:88px;}
-.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
-@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
-.card:hover{transform:scale(1.02);}
-.card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
-.card-body{padding:8px;}
-.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
-.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;}
-.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
-.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
-.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
-.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
-.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
-.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
-.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marathi Crime Files</title>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    #loginBtn, #logoutBtn {
+      background: #007bff;
+      border: none;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 15px;
+    }
+    #logoutBtn { background: #dc3545; }
+    main {
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    #adminSection {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin: 5px 0 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button[type="submit"] {
+      background: #28a745;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 15px;
+    }
+    .news-card {
+      background: white;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .news-card img {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>📰 Marathi Crime Files</h1>
+    <button id="loginBtn">Login with Google</button>
+    <button id="logoutBtn" style="display:none;">Logout</button>
+  </header>
 
-<header>
-  <div class="flex items-center">
-    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
-    <h1 class="font-bold text-xl">Vasai Live News</h1>
-  </div>
-  <div class="header-buttons">
-    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
-  </div>
-</header>
+  <main>
+    <!-- 🔐 Admin Section -->
+    <div id="adminSection" style="display:none;">
+      <h2>🧑‍💼 Admin News Upload</h2>
+      <form id="newsForm">
+        <input type="text" id="title" placeholder="News Title" required />
+        <textarea id="content" rows="4" placeholder="News Content" required></textarea>
+        <input type="file" id="imageFile" accept="image/*" />
+        <button type="submit">Upload News</button>
+      </form>
+    </div>
 
-<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
+    <!-- 📰 News Feed -->
+    <div id="newsContainer"></div>
+  </main>
 
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save</button>
-</section>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, collection, addDoc, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
-<section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin: Create/Edit News</h2>
-  <input id="aTitle" placeholder="Title">
-  <input id="aCat" placeholder="Category">
-  <div id="blocksList"></div>
-  <button id="addTextBtn">Add Text</button>
-  <button id="addImageBtn">Add Image (Max 5)</button>
-  <button id="publishBtn">Publish</button>
-</section>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
+      authDomain: "marathi-crime-files.firebaseapp.com",
+      projectId: "marathi-crime-files",
+      storageBucket: "marathi-crime-files.appspot.com",
+      messagingSenderId: "973325762370",
+      appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
+      measurementId: "G-1XQPKL3740"
+    };
 
-<section class="posts-grid" id="postsArea"></section>
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
+    const provider = new GoogleAuthProvider();
 
-<div id="modalBg" class="modal-bg">
-  <div class="modal">
-    <button id="modalClose" class="modal-close">X</button>
-    <div id="modalContent"></div>
-  </div>
-</div>
+    const loginBtn = document.getElementById("loginBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
+    const adminSection = document.getElementById("adminSection");
+    const newsForm = document.getElementById("newsForm");
+    const newsContainer = document.getElementById("newsContainer");
 
-<div class="zoom-modal" id="zoomModal">
-  <button class="zoom-close">×</button>
-  <img id="zoomImg" src="">
-</div>
+    const ADMIN_EMAIL = "aapkaemail@gmail.com"; // ⚠️ यहाँ अपना Gmail डालें
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+    // 🔹 Login
+    loginBtn.addEventListener("click", async () => {
+      await signInWithPopup(auth, provider);
+    });
 
-// 🔥 New Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
-  authDomain: "marathi-crime-files.firebaseapp.com",
-  projectId: "marathi-crime-files",
-  storageBucket: "marathi-crime-files.appspot.com",
-  messagingSenderId: "973325762370",
-  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
-  measurementId: "G-1XQPKL3740"
-};
+    // 🔹 Logout
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+    });
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
+    // 🔹 Auth state listener
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        loginBtn.style.display = "none";
+        logoutBtn.style.display = "inline-block";
 
-const ADMIN_EMAIL="zaradigitalseva@gmail.com";
-const IMGBB_API_KEY="d12c2e4a8650157b2b6b9fe85336ea43";
-
-// DOM elements
-const loginBtn=document.getElementById("loginBtn");
-const logoutBtn=document.getElementById("logoutBtn");
-const editorArea=document.getElementById("editorArea");
-const noticeEditor=document.getElementById("noticeEditor");
-const postsArea=document.getElementById("postsArea");
-const blocksList=document.getElementById("blocksList");
-const aTitle=document.getElementById("aTitle");
-const aCat=document.getElementById("aCat");
-const noticeText=document.getElementById("noticeText");
-const headlineText=document.getElementById("headlineText");
-const modalBg=document.getElementById("modalBg");
-const modalClose=document.getElementById("modalClose");
-const modalContent=document.getElementById("modalContent");
-const zoomModal=document.getElementById("zoomModal");
-const zoomImg=document.getElementById("zoomImg");
-let editingId=null;
-
-// 🔑 Auth
-loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
-logoutBtn.onclick=()=>signOut(auth);
-
-auth.onAuthStateChanged(user=>{
-  if(user && user.email===ADMIN_EMAIL){
-    editorArea.classList.remove("hidden");
-    noticeEditor.classList.remove("hidden");
-    loginBtn.classList.add("hidden");
-    logoutBtn.classList.remove("hidden");
-  } else {
-    editorArea.classList.add("hidden");
-    noticeEditor.classList.add("hidden");
-    loginBtn.classList.remove("hidden");
-    logoutBtn.classList.add("hidden");
-  }
-});
-
-// 🖼️ Upload to ImgBB
-async function uploadToImgBB(file){
-  const formData=new FormData();
-  formData.append("image",file);
-  const res=await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,{method:"POST",body:formData});
-  const data=await res.json();
-  return data.data.url;
-}
-
-// ➕ Add text/image block
-document.getElementById("addTextBtn").onclick=()=>{
-  const t=document.createElement("textarea");
-  t.placeholder="Write paragraph...";
-  t.dataset.type="text";
-  t.className="border p-2 w-full mb-2 rounded";
-  blocksList.appendChild(t);
-}
-document.getElementById("addImageBtn").onclick=()=>{
-  if(blocksList.querySelectorAll('input[type="file"]').length>=5){alert("Max 5 images allowed"); return;}
-  const inp=document.createElement("input");
-  inp.type="file";
-  inp.dataset.type="image";
-  inp.className="w-full mb-2";
-  blocksList.appendChild(inp);
-}
-
-// ✅ Publish/Update post
-const publishBtn=document.getElementById("publishBtn");
-publishBtn.onclick=async()=>{
-  const title=aTitle.value.trim(), cat=aCat.value.trim();
-  if(!title) return alert("Enter title!");
-  const blocks=[];
-  for(const el of blocksList.children){
-    if(el.dataset.type=="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
-    else if(el.type=="file" && el.files.length>0){
-      const url=await uploadToImgBB(el.files[0]);
-      if(url) blocks.push({type:"image",url});
-    }
-  }
-  if(blocks.length===0) return alert("Add content!");
-  if(editingId){
-    await updateDoc(doc(db,"vasai_news",editingId),{title,category:cat,blocks,time:Date.now()});
-    editingId=null;
-  } else {
-    await addDoc(collection(db,"vasai_news"),{title,category:cat,blocks,time:Date.now()});
-  }
-  aTitle.value=aCat.value=""; blocksList.innerHTML="";
-}
-
-// 📢 Notice save
-const noticeRef=doc(db,"settings","notice");
-document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
-
-// 🔄 Load posts + notice
-onSnapshot(query(collection(db,"vasai_news"),orderBy("time","desc")),snap=>{
-  const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
-  postsArea.innerHTML="";
-  posts.forEach(d=>{
-    const img=d.blocks.find(b=>b.type=="image")?.url||"https://via.placeholder.com/300x150?text=No+Image";
-    const txt=d.blocks.find(b=>b.type=="text")?.text.substring(0,80)+"..."||"";
-    const card=document.createElement("div");
-    card.className="card";
-    card.innerHTML=`<img src='${img}' class='image-zoom'><div class='card-body'><h3>${d.title}</h3><p>${txt}</p></div>`;
-    card.onclick=()=>showModal(d);
-    postsArea.appendChild(card);
-  });
-  headlineText.textContent=posts.slice(0,5).map(p=>p.title).join(" — ");
-});
-onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:"";});
-
-// 🪟 Modal
-modalClose.onclick=()=>modalBg.style.display="none";
-modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
-
-function showModal(d){
-  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
-  d.blocks.forEach(b=>{
-    if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
-    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
-  });
-
-  const user=auth.currentUser;
-  if(user && user.email===ADMIN_EMAIL){
-    const editBtn=document.createElement("button");
-    editBtn.textContent="Edit";
-    editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
-    editBtn.onclick=()=>{
-      editingId=d.id;
-      aTitle.value=d.title;
-      aCat.value=d.category;
-      blocksList.innerHTML="";
-      d.blocks.forEach(b=>{
-        if(b.type=="text"){
-          const t=document.createElement("textarea");
-          t.value=b.text;
-          t.dataset.type="text";
-          t.className="border p-2 w-full mb-2 rounded";
-          blocksList.appendChild(t);
+        if (user.email === ADMIN_EMAIL) {
+          adminSection.style.display = "block";
         } else {
-          const inp=document.createElement("input");
-          inp.type="file";
-          inp.className="w-full mb-2";
-          blocksList.appendChild(inp);
+          adminSection.style.display = "none";
+          alert("आप admin नहीं हैं।");
         }
+      } else {
+        loginBtn.style.display = "inline-block";
+        logoutBtn.style.display = "none";
+        adminSection.style.display = "none";
+      }
+    });
+
+    // 🔹 News Upload
+    newsForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const title = document.getElementById("title").value;
+      const content = document.getElementById("content").value;
+      const imageFile = document.getElementById("imageFile").files[0];
+      let imageUrl = "";
+
+      if (imageFile) {
+        const storageRef = ref(storage, "newsImages/" + Date.now() + "_" + imageFile.name);
+        await uploadBytes(storageRef, imageFile);
+        imageUrl = await getDownloadURL(storageRef);
+      }
+
+      await addDoc(collection(db, "news"), {
+        title,
+        content,
+        imageUrl,
+        timestamp: new Date()
       });
-      modalBg.style.display="none";
-    };
-    const delBtn=document.createElement("button");
-    delBtn.textContent="Delete";
-    delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
-    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"vasai_news",d.id)); modalBg.style.display="none";}
-    modalContent.appendChild(editBtn);
-    modalContent.appendChild(delBtn);
-  }
 
-  modalBg.style.display="flex";
+      newsForm.reset();
+      alert("✅ News Uploaded Successfully!");
+      loadNews();
+    });
 
-  // Image zoom inside modal
-  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{
-    img.onclick=(e)=>{
-      e.stopPropagation();
-      zoomImg.src=img.src;
-      zoomModal.style.display="flex";
-    };
-  });
-}
+    // 🔹 Load News
+    async function loadNews() {
+      newsContainer.innerHTML = "<p>Loading news...</p>";
+      const q = query(collection(db, "news"), orderBy("timestamp", "desc"));
+      const snap = await getDocs(q);
+      newsContainer.innerHTML = "";
 
-// 🔍 Zoom close
-document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
-zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
-</script>
+      snap.forEach((doc) => {
+        const news = doc.data();
+        const div = document.createElement("div");
+        div.className = "news-card";
+        div.innerHTML = `
+          <h3>${news.title}</h3>
+          <p>${news.content}</p>
+          ${news.imageUrl ? `<img src="${news.imageUrl}" alt="news image" />` : ""}
+        `;
+        newsContainer.appendChild(div);
+      });
+    }
 
+    loadNews();
+  </script>
 </body>
 </html>
