--- a/index.html
+++ b/index.html
@@ -1,146 +1,138 @@
-<!DOCTYPE html>
-<html lang="mr">
+<!doctype html>
+<html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marathi Crime Files</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Marathi Crime Files — News Portal</title>
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      margin: 0; padding: 0;
     }
     header {
-      background: #111;
-      color: #fff;
-      padding: 10px 20px;
+      background: #b30000;
+      color: white;
       text-align: center;
-    }
-    #loginBtn, #logoutBtn {
-      background: #007bff;
-      border: none;
-      color: white;
-      padding: 10px 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 15px;
-    }
-    #logoutBtn { background: #dc3545; }
-    main {
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    #adminSection {
-      background: white;
       padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-bottom: 30px;
+      font-size: 24px;
     }
-    input, textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button[type="submit"] {
-      background: #28a745;
-      color: white;
+    #login-btn, #logout-btn {
+      background: white;
+      color: #b30000;
       border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
+      padding: 8px 14px;
+      border-radius: 5px;
       cursor: pointer;
-      font-size: 15px;
+      font-weight: bold;
+    }
+    #admin-section {
+      display: none;
+      background: #fff;
+      padding: 15px;
+      margin: 20px auto;
+      max-width: 600px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+    }
+    textarea, input[type="file"] {
+      width: 100%;
+      margin: 8px 0;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    #news-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 15px;
+      padding: 20px;
     }
     .news-card {
       background: white;
-      margin-bottom: 15px;
       border-radius: 10px;
-      padding: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      overflow: hidden;
       cursor: pointer;
-      transition: 0.3s;
+      transition: transform 0.2s;
     }
     .news-card:hover { transform: scale(1.02); }
     .news-card img {
       width: 100%;
-      height: 200px;
+      height: 180px;
       object-fit: cover;
-      border-radius: 10px;
     }
-    #newsModal {
+    .news-card h3 {
+      margin: 10px;
+      font-size: 18px;
+      color: #333;
+    }
+    #news-popup {
       display: none;
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.6);
       justify-content: center;
       align-items: center;
     }
-    #newsContent {
+    #popup-content {
       background: white;
       padding: 20px;
       border-radius: 10px;
-      max-width: 800px;
-      max-height: 90vh;
+      max-width: 600px;
+      max-height: 90%;
       overflow-y: auto;
     }
-    #closeModal {
-      background: red;
+    #popup-content img {
+      width: 100%;
+      margin-bottom: 10px;
+      border-radius: 6px;
+    }
+    #close-popup {
+      background: #b30000;
       color: white;
       border: none;
       padding: 8px 14px;
-      border-radius: 6px;
+      border-radius: 5px;
       cursor: pointer;
-      float: right;
-    }
-    .news-full img {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 10px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>📰 Marathi Crime Files</h1>
-    <button id="loginBtn">Login with Google</button>
-    <button id="logoutBtn" style="display:none;">Logout</button>
+    Marathi Crime Files
+    <button id="login-btn">Google Login</button>
+    <button id="logout-btn" style="display:none;">Logout</button>
   </header>
 
-  <main>
-    <!-- 🔐 Admin Section -->
-    <div id="adminSection" style="display:none;">
-      <h2>🧑‍💼 Admin News Upload</h2>
-      <form id="newsForm">
-        <input type="text" id="title" placeholder="News Title" required />
-        <textarea id="content" rows="5" placeholder="News Content (आप यहाँ text लिखें, image नीचे select करें)" required></textarea>
-        <label>एक से अधिक Images चुनें:</label>
-        <input type="file" id="imageFiles" accept="image/*" multiple />
-        <button type="submit">Upload News</button>
-      </form>
-    </div>
+  <section id="admin-section">
+    <h2>📰 New Post</h2>
+    <input type="text" id="news-title" placeholder="News Heading..." />
+    <textarea id="news-content" rows="6" placeholder="Write full news... (you can add [image1], [image2] to mark image positions)"></textarea>
+    <input type="file" id="news-images" multiple />
+    <button id="post-btn">Post News</button>
+  </section>
 
-    <!-- 📰 News Cards -->
-    <div id="newsContainer"></div>
-  </main>
+  <main id="news-list"></main>
 
-  <!-- Full News Modal -->
-  <div id="newsModal">
-    <div id="newsContent">
-      <button id="closeModal">X बंद करें</button>
-      <div id="fullNews"></div>
+  <div id="news-popup">
+    <div id="popup-content">
+      <h2 id="popup-title"></h2>
+      <div id="popup-body"></div>
+      <button id="close-popup">Close</button>
     </div>
   </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, collection, addDoc, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+    // ✅ Firebase setup
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
+    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } 
+      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+    import { getFirestore, collection, addDoc, getDocs, serverTimestamp, orderBy, query } 
+      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } 
+      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
@@ -158,91 +150,97 @@
     const storage = getStorage(app);
     const provider = new GoogleAuthProvider();
 
-    const loginBtn = document.getElementById("loginBtn");
-    const logoutBtn = document.getElementById("logoutBtn");
-    const adminSection = document.getElementById("adminSection");
-    const newsForm = document.getElementById("newsForm");
-    const newsContainer = document.getElementById("newsContainer");
-    const newsModal = document.getElementById("newsModal");
-    const fullNews = document.getElementById("fullNews");
-    const closeModal = document.getElementById("closeModal");
+    const loginBtn = document.getElementById("login-btn");
+    const logoutBtn = document.getElementById("logout-btn");
+    const adminSection = document.getElementById("admin-section");
+    const postBtn = document.getElementById("post-btn");
+    const newsList = document.getElementById("news-list");
+    const popup = document.getElementById("news-popup");
+    const popupTitle = document.getElementById("popup-title");
+    const popupBody = document.getElementById("popup-body");
+    const closePopup = document.getElementById("close-popup");
 
-    const ADMIN_EMAIL = "aapkaemail@gmail.com"; // ⚠️ यहाँ अपना Gmail डालें
+    // 🟢 Login
+    loginBtn.addEventListener("click", async () => {
+      try {
+        await signInWithPopup(auth, provider);
+      } catch (error) {
+        alert("Login error: " + error.message);
+      }
+    });
 
-    // 🔹 Login / Logout
-    loginBtn.addEventListener("click", async () => { await signInWithPopup(auth, provider); });
-    logoutBtn.addEventListener("click", async () => { await signOut(auth); });
+    // 🔴 Logout
+    logoutBtn.addEventListener("click", () => signOut(auth));
 
-    // 🔹 Auth listener
+    // 👀 Auth state listener
     onAuthStateChanged(auth, (user) => {
       if (user) {
         loginBtn.style.display = "none";
-        logoutBtn.style.display = "inline-block";
-        if (user.email === ADMIN_EMAIL) adminSection.style.display = "block";
-        else adminSection.style.display = "none";
+        logoutBtn.style.display = "inline";
+        adminSection.style.display = "block";
       } else {
-        loginBtn.style.display = "inline-block";
+        loginBtn.style.display = "inline";
         logoutBtn.style.display = "none";
         adminSection.style.display = "none";
       }
     });
 
-    // 🔹 Upload News with Multiple Images
-    newsForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const title = document.getElementById("title").value;
-      const content = document.getElementById("content").value;
-      const imageFiles = document.getElementById("imageFiles").files;
-      const imageUrls = [];
+    // 📰 Post news
+    postBtn.addEventListener("click", async () => {
+      const title = document.getElementById("news-title").value;
+      const content = document.getElementById("news-content").value;
+      const files = document.getElementById("news-images").files;
 
-      for (const file of imageFiles) {
-        const storageRef = ref(storage, "newsImages/" + Date.now() + "_" + file.name);
+      if (!title || !content) return alert("कृपया Title और News दोनों भरें");
+
+      const imgURLs = [];
+      for (let file of files) {
+        const storageRef = ref(storage, "news/" + file.name);
         await uploadBytes(storageRef, file);
         const url = await getDownloadURL(storageRef);
-        imageUrls.push(url);
+        imgURLs.push(url);
       }
 
       await addDoc(collection(db, "news"), {
         title,
         content,
-        imageUrls,
-        timestamp: new Date()
+        images: imgURLs,
+        timestamp: serverTimestamp()
       });
 
-      newsForm.reset();
-      alert("✅ News Uploaded Successfully!");
-      loadNews();
+      alert("News posted successfully!");
+      location.reload();
     });
 
-    // 🔹 Load all news (Card View)
+    // 📄 Fetch news
     async function loadNews() {
       const q = query(collection(db, "news"), orderBy("timestamp", "desc"));
       const snap = await getDocs(q);
-      newsContainer.innerHTML = "";
-
-      snap.forEach((doc) => {
-        const news = doc.data();
+      newsList.innerHTML = "";
+      snap.forEach(doc => {
+        const data = doc.data();
+        const img = data.images?.[0] || "https://via.placeholder.com/400x200";
         const div = document.createElement("div");
         div.className = "news-card";
-        div.innerHTML = `
-          ${news.imageUrls && news.imageUrls[0] ? `<img src="${news.imageUrls[0]}" />` : ""}
-          <h3>${news.title}</h3>
-        `;
-        div.addEventListener("click", () => openNews(news));
-        newsContainer.appendChild(div);
+        div.innerHTML = `<img src="${img}"><h3>${data.title}</h3>`;
+        div.onclick = () => showPopup(data);
+        newsList.appendChild(div);
       });
     }
 
-    function openNews(news) {
-      newsModal.style.display = "flex";
-      fullNews.innerHTML = `
-        <h2>${news.title}</h2>
-        <p>${news.content}</p>
-        ${news.imageUrls ? news.imageUrls.map(url => `<img src="${url}" />`).join("") : ""}
-      `;
+    function showPopup(data) {
+      popup.style.display = "flex";
+      popupTitle.innerText = data.title;
+      let html = data.content;
+      if (data.images && data.images.length) {
+        data.images.forEach((img, i) => {
+          html = html.replace(`[image${i+1}]`, `<img src="${img}">`);
+        });
+      }
+      popupBody.innerHTML = html;
     }
 
-    closeModal.addEventListener("click", () => newsModal.style.display = "none");
+    closePopup.onclick = () => (popup.style.display = "none");
 
     loadNews();
   </script>
